Closed
Bug 1028512
Opened 11 years ago
Closed 11 years ago
"ASSERTION: lower/upper-roman/alpha should be custom counter style" with transition in SVG
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla33
People
(Reporter: jruderman, Assigned: xidorn)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(3 files, 1 obsolete file)
###!!! ASSERTION: lower/upper-roman/alpha should be custom counter style: 'aStyle != NS_STYLE_LIST_STYLE_LOWER_ROMAN && aStyle != NS_STYLE_LIST_STYLE_UPPER_ROMAN && aStyle != NS_STYLE_LIST_STYLE_LOWER_ALPHA && aStyle != NS_STYLE_LIST_STYLE_UPPER_ALPHA', file layout/style/CounterStyleManager.cpp, line 1875
I'm guessing this is a regression from:
changeset: https://hg.mozilla.org/mozilla-central/rev/bffb0b2f7c2f
user: Xidorn Quan
date: Wed Jun 11 21:12:00 2014 -0400
summary: Bug 966166 - Part 4: Rewrite some builtin counter styles. r=dbaron
Reporter | ||
Comment 1•11 years ago
|
||
Assignee | ||
Comment 2•11 years ago
|
||
I don't think it is the regression of my patch. I cannot reproduce this asseration in my local build, which is several days behind the trunk.
Comment 3•11 years ago
|
||
Comment on attachment 8443886 [details]
testcase
Fixed the mime type of the testcase; now it should reproduce the assertion.
Attachment #8443886 -
Attachment mime type: text/html → image/svg+xml
Assignee | ||
Comment 4•11 years ago
|
||
(In reply to Jonathan Kew (:jfkthame) from comment #3)
> Comment on attachment 8443886 [details]
> testcase
>
> Fixed the mime type of the testcase; now it should reproduce the assertion.
OK, it reproduced. It might be something similar to bug 1016145. We need to call EnsureNonSVGUserAgentStyleSheetsLoaded in some other places to ensure counterstyles.css is loaded.
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → quanxunzhen
Status: NEW → ASSIGNED
OS: Mac OS X → All
Hardware: x86_64 → All
Assignee | ||
Comment 5•11 years ago
|
||
Attachment #8443904 -
Flags: review?(jfkthame)
Comment 6•11 years ago
|
||
Comment on attachment 8443904 [details] [diff] [review]
patch
Review of attachment 8443904 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good. We should also land the testcase (add it to layout/svg/crashtests/ and include it in the manifest there), as we clearly don't have adequate test coverage for this particular case.
Attachment #8443904 -
Flags: review?(jfkthame) → review+
Assignee | ||
Comment 7•11 years ago
|
||
Attachment #8443904 -
Attachment is obsolete: true
Attachment #8444015 -
Flags: review+
Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
Comment 8•11 years ago
|
||
Target Milestone: --- → mozilla33
Comment 9•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Flags: in-testsuite+
Keywords: checkin-needed
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•