Bug 1028512 - Remove {lower,upper}-{roman,alpha} from CSS keywords. r=jfkthame